# video_guidedfilter_parallelism

./: .gitignore  CMakeLists.txt  readme.md
src/: guidedfilter.cpp  guidedfilter.cu  guidedfilter.cuh  main_gpu.cu  utils.cuh
